kubernetes/backend/asp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80        # porta interna do service
      targetPort: 5000 # porta do container
      nodePort: 30080  # porta do host
  type: NodePort
